counter on mobile fix

--- a/style.css
+++ b/style.css
@@ -2493,7 +2493,6 @@ figcaption {
 }
 
 .p {
-  color: #000;
   font-family: Open Sans, sans-serif;
   font-size: 16px;
   line-height: 150%;
